# nbgui

./: .gitignore  README.md  gui.ipynb  pyproject.toml  requirements.txt
nbgui/: __init__.py
